Respect EXIF orientation in search by image

Bug: 797280
Change-Id: Ie05b919e7e5f1aab2ebfc54c5f1dca50b4a18a23